# aoc_2023

./: Cargo.toml
day1/: Cargo.toml
day1/benches/: benchmarks.rs
day1/src/: main.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/benches/: benchmarks.rs
day10/src/: part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: part1.rs  part2.rs
day12/: Cargo.toml
day12/benches/: benchmarks.rs
day12/src/: part1.rs  part2.rs
day13/: Cargo.toml  example2.txt
day13/benches/: benchmarks.rs
day13/src/: part1.rs  part2.rs
day14/: Cargo.toml
day14/benches/: benchmarks.rs
day14/src/: part1.rs  part2.rs
day15/src/: part1.rs  part2.rs
day16/: Cargo.toml  example2.txt  test1.txt  test2.txt
day16/src/: lib.rs  part1.rs  part2.rs
day17/: Cargo.toml
day17/benches/: benchmarks.rs
day17/src/: part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/benches/: benchmarks-criterion.rs  benchmarks.rs
day2/src/: part1.rs  part2.rs
day20/: Cargo.toml
day20/src/: part1.rs  part2.rs
day21/: Cargo.toml
day21/benches/: benchmarks.rs
day21/src/: part1.rs  part2.rs
day3/: Cargo.toml
day3/benches/: benchmarks.rs
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/benches/: benchmarks.rs
day4/src/: part1.rs  part2.rs
day5/: Cargo.toml
day5/benches/: benchmarks.rs
day5/src/: part1.rs  part2.rs
day6/: Cargo.toml
day6/benches/: benchmarks.rs
day6/src/: part1.rs  part2.rs
day7/: Cargo.toml
day7/benches/: benchmarks.rs
day7/src/: part1.rs  part2.rs
day8/: Cargo.toml
day8/benches/: benchmarks.rs
day8/src/: nodeapproach.rs  part1.rs  part2.rs
day9/: Cargo.toml
day9/benches/: benchmarks.rs
day9/src/: part1.rs  part2.rs
