[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
glam = "0.24.2"
itertools = "0.12.0"
rayon = "1.8.0"
strum ={ version =  "0.25.0", features = ["std", "strum_macros"] }
strum_macros = "0.25.3"
