[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
dhat = "0.3.2"
strum = "0.25.0"
strum_macros = "0.25.3"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
divan = "0.1.7"

[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
