[package]
name = "day2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"

[dev-dependencies]
divan = "0.1.4"
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "benchmarks-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false
