[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
range-collections = "0.4.5"
range-set-blaze = "0.1.13"
rayon = "1.8.0"

[dev-dependencies]
divan = "0.1.5"

[[bench]]
name = "benchmarks"
harness = false
