[package]
name = "day8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prime_factorization = "1.0.4"
rayon = "1.8.0"

[dev-dependencies]
divan = "0.1.5"

[[bench]]
name = "benchmarks"
harness = false
